small fixes in preparation for four columns

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*   
-Theme Name:Borgerlyst 2
+Theme Name:Borgerlyst
 Theme URI:http://borgerlyst.dk
 Description:Borgerlyst Standard Tema
-Author:LJD/MHF
+Author:LJD / MHF
 Author URI:http://ljd.dk/
-Version:0.2
-Tags:two-columns, fixed-width
-.
+Version: 2.0 Alpha
+Tags: four-columns, fixed-width
+
 Released under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0</a>.
-.
+
 */
